fix overlapping speaker details data

--- a/ui/speaker-details.module.scss
+++ b/ui/speaker-details.module.scss
@@ -68,7 +68,6 @@
 
     li {
       text-align: right;
-      height: 40px;
       line-height: 40px;
       list-style-type: none;
       color: var(--secondary);
